# cloudflare-cms

./: COMPLETION_REPORT.md  README.md  README.txt  ReadME.md  cloudpress.patch  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  worker.js  wrangler.toml
cloudflare-cms-main/: DEPLOYMENT_GUIDE.md  MIGRATION_GUIDE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_GUIDE.md  README.md  WORDPRESS_IMPLEMENTATION.md  package.json
cloudflare-cms-main/platform/: tailwind.config.mjs  tsconfig.json
cloudflare-cms-main/platform/src/: env.d.ts
cloudflare-cms-main/plugins/cloudpress-sqlite-integration/: cloudpress-sqlite-integration.php
cloudflare-cms-main/workers/ai-gateway/: package.json  tsconfig.json
cloudflare-cms-main/workers/cms-site/: package.json
database/: platform-schema.sql  site-schema.sql
database/migrations/: 0001_email_auth_and_cf_key.sql  0002_paid_hosting_paypal_and_design.sql
database/seeds/: site-seeds.sql
platform/: .dev.vars.example  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json  wrangler.jsonc
platform/public/: robots.txt
plugins/cloudpress-easy-migration/: README.md  cloudpress-easy-migration.php
plugins/cloudpress-sqlite-integration/: README.md
shared/: package.json  tsconfig.json
shared/src/: index.ts
workers/ai-gateway/: package.json  wrangler.toml
workers/cms-site/: package.json  tsconfig.json  wrangler.toml
workers/media-processor/: Cargo.toml  Makefile  wrangler.toml
workers/media-processor/src/: lib.rs
workers/platform-api/: package.json  tsconfig.json  wrangler.toml
(+225 files in other folders)
